[package]
name = "level_tsdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
lru = "0.7.8"

[dev-dependencies]
rand = "*"
statrs = "*"

[features]
default = ["trace_io"]
trace_io = []
